# camel-dual-llm-defense

./: .env.example  .gitignore  CLAUDE.md  GLINER_INTEGRATION.md  README.md  agent.py  config.yaml  deepteam_adapter.py  demo.py  eval.py  eval_data.py  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  car_rental_agent.py  payment_agent.py  travel_agent.py
anthropic_tools/: __init__.py  tool_definitions.py  tool_executor.py
mcp_server/: __init__.py  server.py
mcp_server/sandbox/: api_sandbox.py  input_sandbox.py  output_sandbox.py
mcp_server/tools/: car_search.py  license_validator.py
tests/: conftest.py  docent_deepteam_export.py  docent_export.py  test_camel_boundary.py  test_camel_defense.py  test_camel_integration.py  test_camel_vs_vulnerable.py  test_gliner_layer.py  test_injection_attacks.py  test_integration.py  test_mcp_sandbox.py  test_security.py  test_trajectory.py  test_usability.py
tests/data/: __init__.py
trust_layer/: __init__.py  audit_log.py  capability_tokens.py  config.py  gliner_layer.py  sanitizer.py  trace.py  trust_boundary.py
